--- a/build.xml
+++ b/build.xml
@@ -12,10 +12,7 @@
 		<javac srcdir="${source_dir}" destdir="${build_dir}" debug="on" target="1.7" source="1.7" includeantruntime="false">
 			<classpath path="ext/asm-all-4.0.jar" />
 			<classpath path="ext/jline-2.12-SNAPSHOT.jar" />
-			<classpath path="ext/jna-4.0.0.jar" />
-			<classpath path="ext/httpcore-4.3.jar" />
-			<classpath path="ext/httpclient-4.3.1.jar" />
-			<classpath path="ext/commons-logging-1.1.3.jar" />
+			<classpath path="ext/jython-2.5.3.jar" />
 			<include name="**/*.java" />
 		</javac>
 	</target>
@@ -26,17 +23,13 @@
 	<target name="jar" depends="build">
 		<jar jarfile="${BinaryName}.jar">
 			<fileset dir="${build_dir}" includes="**/*.class" />
-			<fileset dir="." includes="lib/**/*.green" />
 			<exclude name="**/*Test.class" />
 			<manifest>
 				<attribute name="Main-Class" value="zen.main.ZenMain" />
 			</manifest>
 			<zipfileset src="ext/asm-all-4.0.jar" />
 			<zipfileset src="ext/jline-2.12-SNAPSHOT.jar" />
-			<zipfileset src="ext/jna-4.0.0.jar" />
-			<zipfileset src="ext/httpcore-4.3.jar" />
-			<zipfileset src="ext/httpclient-4.3.1.jar" />
-			<zipfileset src="ext/commons-logging-1.1.3.jar" />
+			<zipfileset src="ext/jython-2.5.3.jar" />
 		</jar>
 	</target>
 
