--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,7 @@
 	<property name="BinaryName" value="libzen" />
 	<property name="source_dir" value="src" />
 	<property name="build_dir"  value="build" />
+	<property name="jline_jar"  value="ext/jline-1.0.jar" />
 
 	<!-- ================================== -->
 	<!--                BUILD               -->
@@ -11,7 +12,7 @@
 		<mkdir dir="${build_dir}" />
 		<javac srcdir="${source_dir}" destdir="${build_dir}" debug="on" target="1.7" source="1.7" includeantruntime="false">
 			<classpath path="ext/asm-all-4.0.jar" />
-			<classpath path="ext/jline-2.12-SNAPSHOT.jar" />
+			<classpath path="${jline_jar}" />
 			<include name="**/*.java" />
 			<compilerarg value="-Xlint:deprecation" />
 			<compilerarg value="-Xlint:unchecked" />
@@ -29,8 +30,9 @@
 				<attribute name="Main-Class" value="zen.main.ZenMain" />
 			</manifest>
 			<zipfileset src="ext/asm-all-4.0.jar" />
-			<zipfileset src="ext/jline-2.12-SNAPSHOT.jar" />
+			<zipfileset src="${jline_jar}" />
 			<zipfileset src="ext/jruby-complete-1.7.9.jar" />
+			<zipfileset src="ext/jython-2.5.3.jar" />
 		</jar>
 	</target>
 
