--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,8 @@
 	<!-- ================================== -->
 	<target name="build">
 		<mkdir dir="${build_dir}" />
-		<javac srcdir="${source_dir}" destdir="${build_dir}" debug="on" target="1.7" source="1.7" includeantruntime="false">
+		<javac srcdir="${source_dir}" destdir="${build_dir}" target="1.7" source="1.7"
+			debug="yes" debuglevel="lines,vars,source" includeantruntime="false">
 			<classpath path="ext/asm-all-4.0.jar" />
 			<classpath path="${jline_jar}" />
 			<include name="**/*.java" />
@@ -47,5 +48,35 @@
 	<!--               TEST                 -->
 	<!-- ================================== -->
 	<target name="test">
+	</target>
+
+	<!-- ================================== -->
+	<!--                PMD                 -->
+	<!-- ================================== -->
+	<property name="lib.pmd.dir" location="/opt/java/pmd" />
+	<path id="pmd.classpath">
+		<fileset dir="${lib.pmd.dir}">
+			<include name="*.jar"/>
+		</fileset>
+	</path>
+
+	<target name="pmd" depends="build">
+		<taskdef classpathref="pmd.classpath" name="pmd" classname="net.sourceforge.pmd.ant.PMDTask"/>
+		<pmd shortFilenames="true">
+			<sourceLanguage name="java" version="1.7"/>
+			<ruleset>java-basic</ruleset>
+			<ruleset>java-imports</ruleset>
+			<ruleset>java-strings</ruleset>
+			<formatter type="xml" toFile="${build_dir}/pmd.xml" />
+			<!--
+			<formatter type="text" toConsole="true" />
+			<formatter type="html" toFile="pmd_report.html">
+				<param name="linkPrefix" value="http://pmd.sourceforge.net/xref/"/>
+			</formatter>
+			//-->
+			<fileset dir="${source_dir}">
+				<include name="**/*.java" />
+			</fileset>
+		</pmd>
 	</target>
 </project>
