--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,14 @@
 	<property name="lib.cobertura.dir" location="/opt/java/cobertura" />
 	<property name="lib.pmd.dir" location="/opt/java/pmd" />
 
+	<condition property="have.cobertura">
+		<available file="${lib.cobertura.dir}" />
+	</condition>
+
+	<condition property="have.pmd">
+		<available file="${lib.pmd.dir}" />
+	</condition>
+
 	<!-- ================================== -->
 	<!--                BUILD               -->
 	<!-- ================================== -->
@@ -62,7 +70,8 @@
 		</javac>
 	</target>
 
-	<target name="pre-coverage" depends="pre-test">
+	<target name="pre-coverage" depends="pre-test" if="have.cobertura">
+		<property name="run_coverage" location="true" />
 		<delete file="cobertura.ser" />
 		<path id="cobertura.classpath">
 			<fileset dir="${lib.cobertura.dir}">
@@ -70,14 +79,13 @@
 			</fileset>
 		</path>
 		<taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
-
 		<cobertura-instrument todir="${build_dir}/instrumented">
 			<fileset dir="${build_dir}" includes="**/*.class" />
 		</cobertura-instrument>
 	</target>
 
-	<mkdir dir="${build_dir}/test-reports" />
-	<target name="run-test" depends="pre-coverage">
+	<target name="run-test1" if="run_coverage">
+		<mkdir dir="${build_dir}/test-reports" />
 		<junit fork="yes" forkmode="once">
 			<classpath location="${build_dir}/instrumented"/>
 			<classpath location="${build_dir}"/>
@@ -94,15 +102,35 @@
 					<include name="**/*Test*" />
 				</fileset>
 			</batchtest>
-			<!--<formatter type="brief" usefile="false"/>-->
 			<formatter type="xml" usefile="true" />
 		</junit>
 	</target>
 
-	<target name="test" depends="run-test">
+	<target name="run-test2" unless="run_coverage">
+		<mkdir dir="${build_dir}/test-reports" />
+		<junit fork="yes" forkmode="once">
+			<classpath location="${build_dir}"/>
+			<classpath>
+				<fileset dir="ext">
+					<include name="**/*.jar" />
+				</fileset>
+			</classpath>
+			<batchtest todir="${build_dir}/test-reports">
+				<fileset dir="${build_dir}">
+					<include name="**/*Test*" />
+				</fileset>
+			</batchtest>
+			<formatter type="xml" usefile="true" />
+		</junit>
+	</target>
+
+	<target name="post-coverage" if="run_coverage">
 		<cobertura-report destdir="build/coverage" format="xml">
 			<fileset dir="${source_dir}" includes="**/*.java"/>
 		</cobertura-report>
+	</target>
+
+	<target name="test" depends="pre-coverage, run-test1, run-test2, post-coverage">
 	</target>
 
 	<!-- ================================== -->
